--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Api for iyansr.id personal web",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
     "build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src"
   },
@@ -14,10 +13,17 @@
   "author": "IyanSR",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "marked": "^0.8.1",
     "mongoose": "^5.9.4",
     "netlify-lambda": "^1.6.3",
-    "serverless-http": "^2.3.2"
+    "sanitize-html": "^1.22.1",
+    "serverless-http": "^2.3.2",
+    "shortid": "^2.2.15",
+    "slugify": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
