--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,14 +8,11 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  test_pull_request:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [10.x, 12.x]
-
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -27,3 +24,4 @@ jobs:
       env:
         CI: true
         MONGO_URL_TEST: ${{ secrets.MONGO_URL_TEST }}
+        NODE_ENV : test
