--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "description": "Api for iyansr.id personal web",
   "main": "server.js",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/iyansr/api.iyansr.id"
+  },
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
     "build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src",
-    "test": "NODE_ENV=test jest --testTimeout=100000"
+    "test": "NODE_ENV=test jest --testTimeout=100000",
+    "test:coverage": "NODE_ENV=test jest --coverage",
+    "test:coveralls": "NODE_ENV=test jest --coverage && coveralls < coverage/lcov.info"
   },
   "keywords": [
     "Api"
@@ -27,6 +33,7 @@
     "slugify": "^1.4.0"
   },
   "devDependencies": {
+    "coveralls": "^3.0.11",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
