--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ notifications:
 
 env:
   - NODE_ENV=test
-  - MONGO_URL_TEST=$MONGO_URL_TEST
+  - MONGO_URL_TEST=mongodb+srv://iyansr_admin:PpDjMpuKud4c2Fm1@cluster0-uzhdu.gcp.mongodb.net/test?retryWrites=true&w=majority
