--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Api for iyansr.id personal web",
   "main": "server.js",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/iyansr/api.iyansr.id"
+    "type": "git",
+    "url": "https://github.com/iyansr/api.iyansr.id"
   },
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
     "build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src",
-    "test": "NODE_ENV=test jest --testTimeout=10000",
+    "test": "NODE_ENV=test jest --testTimeout=10000 --forceExit",
     "test:coverage": "NODE_ENV=test jest --coverage",
     "test:coveralls": "NODE_ENV=test jest --coverage && coveralls < coverage/lcov.info"
   },
