--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
     "build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src",
-    "test": "NODE_ENV=test jest --testTimeout=10000 --forceExit",
-    "test:coverage": "NODE_ENV=test jest --coverage --forceExit",
-    "test:coveralls": "NODE_ENV=test jest --coverage  --testTimeout=10000 --forceExit && coveralls < coverage/lcov.info"
+    "test": "NODE_ENV=test jest --testTimeout=10000 --detectOpenHandles --verbose",
+    "test:coverage": "NODE_ENV=test jest --coverage --detectOpenHandles --verbose",
+    "test:coveralls": "NODE_ENV=test jest --coverage  --testTimeout=10000 --detectOpenHandles && coveralls < coverage/lcov.info"
   },
   "keywords": [
     "Api"
